--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: SoPhy
-Version: 0.91
+Version: 0.91-1
 Title: Soil Physics Tools
 Author: Martin Schlather <martin.schlather@cu.lu>, Bernd Huwe <Bernd.Huwe@uni-bayreuth.de>,
 Maintainer: Martin Schlather <martin.schlather@cu.lu>
@@ -7,3 +7,4 @@ Depends: R (>= 1.6.0)
 Description: SWMS_2D interface, Submission to Computers and Geosciences, title: The use of the language interface of R: two examples for modelling water flux and solute transport
 License: GPL Version 2 or later.
 URL: http://www.cu.lu/~schlathe
+Packaged: Mon Mar  1 11:20:09 2004; schlather
