--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: SoPhy
-Version: 0.91-1
-Title: Soil Physics Tools
-Author: Martin Schlather <martin.schlather@cu.lu>, Bernd Huwe <Bernd.Huwe@uni-bayreuth.de>,
+Version: 1.0.16
+Title: Soil Physics Tools (for Linux systems only)
+Author: Martin Schlather <martin.schlather@cu.lu>
 Maintainer: Martin Schlather <martin.schlather@cu.lu>
-Depends: R (>= 1.6.0)
-Description: SWMS_2D interface, Submission to Computers and Geosciences, title: The use of the language interface of R: two examples for modelling water flux and solute transport
-License: GPL Version 2 or later.
+Depends: R (>= 2.0.0), RandomFields (>= 1.2.6)
+SystemRequirements: libtiff-devel, libtiff
+Description: SWMS_2D interface
+License: GPL Version 2 or newer.
 URL: http://www.cu.lu/~schlathe
-Packaged: Mon Mar  1 11:20:09 2004; schlather
+Packaged: Wed Apr 27 12:54:38 2005; schlather
