--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SoPhy
-Version: 1.0.16
-Title: Soil Physics Tools (for Linux systems only)
-Author: Martin Schlather <martin.schlather@cu.lu>
-Maintainer: Martin Schlather <martin.schlather@cu.lu>
+Version: 1.0.17
+Title: Soil Physics Tools
+Author: R by Martin Schlather <schlath@hsu-hh.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
+Maintainer: Martin Schlather <schlath@hsu-hh.de>
 Depends: R (>= 2.0.0), RandomFields (>= 1.2.6)
-SystemRequirements: libtiff-devel, libtiff
+SystemRequirements: linux: libtiff (and libtiff-devel); windows:Tiff for windows, see topic SoPhy below
 Description: SWMS_2D interface
 License: GPL Version 2 or newer.
 URL: http://www.cu.lu/~schlathe
-Packaged: Wed Apr 27 12:54:38 2005; schlather
+Packaged: Tue May 24 13:12:39 2005; schlather
