--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SoPhy
-Version: 1.0.17
+Version: 1.0.19
 Title: Soil Physics Tools
 Author: R by Martin Schlather <schlath@hsu-hh.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
-Maintainer: Martin Schlather <schlath@hsu-hh.de>
-Depends: R (>= 2.0.0), RandomFields (>= 1.2.6)
-SystemRequirements: linux: libtiff (and libtiff-devel); windows:Tiff for windows, see topic SoPhy below
+Maintainer: Martin Schlather <schlath@hsu-hh.de> 
+Depends: R (>= 2.0.0), RandomFields (>= 1.3.0)
+SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic 'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL Version 2 or newer.
-URL: http://www.cu.lu/~schlathe
-Packaged: Tue May 24 13:12:39 2005; schlather
+URL: http://www2.hsu-hh.de/schlath/index.html
+Packaged: Tue Aug  2 11:44:43 2005; schlather
