--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: SoPhy
-Version: 1.0.27
+Version: 1.0.28
 Title: Soil Physics Tools
 Author: R by Martin Schlather <schlath@hsu-hh.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
 Maintainer: Martin Schlather <schlath@hsu-hh.de> 
@@ -7,5 +7,5 @@ Depends: R (>= 2.2.0), RandomFields (>= 1.3.0)
 SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic 'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL Version 2 or newer.
-URL: http://bruce.hsu-hh.de/~schlather/index.html
-Packaged: Tue Jan 24 09:07:44 2006; schlather
+URL: http://www2.hsu-hh.de/schlath/index.html
+Packaged: Fri Jan 27 17:30:03 2006; hornik
