--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SoPhy
-Version: 1.0.28
+Version: 1.0.29
 Title: Soil Physics Tools
 Author: R by Martin Schlather <schlath@hsu-hh.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
 Maintainer: Martin Schlather <schlath@hsu-hh.de> 
-Depends: R (>= 2.2.0), RandomFields (>= 1.3.0)
+Depends: R (>= 2.2.0), RandomFields (>= 1.3.27)
 SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic 'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL Version 2 or newer.
 URL: http://www2.hsu-hh.de/schlath/index.html
-Packaged: Fri Jan 27 17:30:03 2006; hornik
+Packaged: Tue Jun  6 14:46:36 2006; schlather
