--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: SoPhy
-Version: 1.0.34
+Version: 1.0.36
 Date: 2006-07-01
 Title: Soil Physics Tools
 Author: R by Martin Schlather <martin.schlather@math.uni-goettingen.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
@@ -9,4 +9,4 @@ SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.
 Description: SWMS_2D interface
 License: GPL
 URL: http://www.stochastik.math.uni-goettingen.de/institute
-Packaged: Sun Sep 14 19:42:55 2008; hornik
+Packaged: Tue Jan 13 16:22:34 2009; schlather
