--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: SoPhy
-Version: 1.0.31
+Version: 1.0.32
 Date: 2006-07-01
 Title: Soil Physics Tools
-Author: R by Martin Schlather <schlath@hsu-hh.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
-Maintainer: Martin Schlather <schlath@hsu-hh.de> 
+Author: R by Martin Schlather <martin.schlather@math.uni-goettingen.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
+Maintainer: Martin Schlather <martin.schlather@math.uni-goettingen.de> 
 Depends: R (>= 2.2.0), RandomFields (>= 1.3.27)
 SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic 'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL Version 2 or newer.
 URL: http://www2.hsu-hh.de/schlath/index.html
-Packaged: Fri Sep 22 21:22:11 2006; hornik
+Packaged: Thu Oct  4 00:03:47 2007; schlather
