--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: SoPhy
-Version: 1.0.36
+Version: 1.0.39
 Date: 2006-07-01
 Title: Soil Physics Tools
-Author: R by Martin Schlather <martin.schlather@math.uni-goettingen.de>; FORTRAN by Rien van Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
-Maintainer: Martin Schlather <martin.schlather@math.uni-goettingen.de> 
+Author: R by Martin Schlather
+        <martin.schlather@math.uni-goettingen.de>; FORTRAN by Rien van
+        Genuchten, Carl A. Mendoza, Rene Therrien, Edward Sudicky
+Maintainer: Martin Schlather <martin.schlather@math.uni-goettingen.de>
 Depends: R (>= 2.2.0), RandomFields (>= 1.3.27)
-SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic 'SoPhy' in the documentation
+SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff
+        (libtiff3.dll), zlib1.dll and jpeg62.dll; see also the topic
+        'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL
 URL: http://www.stochastik.math.uni-goettingen.de/institute
-Packaged: Tue Jan 13 16:22:34 2009; schlather
+Packaged: 2009-11-01 01:11:38 UTC; schlather
+Repository: CRAN
+Date/Publication: 2009-11-01 17:33:20
