--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: SoPhy
-Version: 1.0.39
+Version: 1.0.40
 Date: 2006-07-01
 Title: Soil Physics Tools
 Author: R by Martin Schlather
@@ -12,7 +12,7 @@ SystemRequirements: linux: libtiff (and libtiff-devel); windows: Tiff
         'SoPhy' in the documentation
 Description: SWMS_2D interface
 License: GPL
-URL: http://www.stochastik.math.uni-goettingen.de/institute
-Packaged: 2009-11-01 01:11:38 UTC; schlather
+URL: http://www.stochastik.math.uni-goettingen.de/~schlather
+Packaged: 2011-10-27 00:39:41 UTC; schlather
 Repository: CRAN
-Date/Publication: 2009-11-01 17:33:20
+Date/Publication: 2011-10-27 05:44:11
